  DefaultLocalEntityConnection.setForeignKeys() now handles using the default foreign key fetch depth
  Major refactoring, common.db.condition contents moved to framework.db.condition
  Refactoring continued, methods moved from EntityConditions to Conditions
  ValueObserver now extends EventObserver, related refactoring
  AbstractObservableValue and AbstractValue added and used throughout
  AbstractObservableValue and AbstractValue moved to Values
  Synchronization improvements in Events and Values
  DefaultLocalEntityConnection, minor refactoring to get rid of an iterator
  LocalEntityConnection.createIterator() parameter type changed from EntityCondition to EntitySelectCondition
  DefaultLocalEntityConnection, some refactoring
  EntityConditions merged into Conditions, major refactoring of framework.db.conditions, simplification even
  Condition.EmptyCondition added to indicate a null or empty condition
  Property.setDomainId() removed, domainId no longer used internally
  Entity.Definition.addConditionProvider(), getConditionProvider() and Domain.getConditionProvider() added, conditionProviders map transient
  Condition.StringCondition replaced with CustomCondition, implemented using the above
  DefaultEntityConnectionServer, some methods made final
  Condition.getConditionString() added, related methods moved from DefaultEntityCondition to their respective Condition subclasses
  LocalEntityConnectionProvider.METHOD_LOGGER_ENABLED configuration value added, default false
  AbstractServer.connections and loginProxies are now CuncurrentHashMaps
  Servers.remoteClient(remoteClient, databaseUser) added
  ChinookLoginProxy added, implements database user lookup
  EntityEditPanel.InsertEntityAction now adds a CTRL-+ and CTRL-(numpad+) key events to the associated component to trigger the action
  Attribute and Column removed, methods moved to Property and ColumnProperty respectively
  ValueMap keys no longer restricted to descendants of Attribute, obviously